kubernetes/homeautomation/homeassistant/homeassistant.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeautomation
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true  # This is the key change
      dnsPolicy: ClusterFirstWithHostNet # Required when using hostNetwork
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: serial-by-id
          hostPath:
            path: /dev/serial/by-id
            type: Directory
        - name: homeassistant-config-volume
          persistentVolumeClaim:
            claimName: homeassistant-config-claim
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:2026.3.2
        securityContext:
          privileged: true
        ports:
        - name: http
          containerPort: 8123
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: serial-by-id
          mountPath: /dev/serial/by-id
          readOnly: true
        - name: homeassistant-config-volume
          mountPath: /config

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeautomation
  labels:
    app: homeassistant
spec:
  type: ClusterIP
  selector:
    app: homeassistant
  ports:
  - name: http
    port: 8123
    targetPort: 8123


# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: homeassistant-lb
#   name: homeassistant-lb
#   namespace: homeautomation
# spec:
#   ports:
#   # - name: http # http exposes without password login
#   #   targetPort: 5000
#   #   port: 80
#   - name: http
#     targetPort: 8123
#     port: 8123
#   selector:
#     app: homeassistant
#   loadBalancerIP: 192.168.6.32
#   type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-https
  namespace: homeautomation
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: homeassistant-bas-tls
  rules:
  - host: homeassistant.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
