kubernetes/homeautomation/homeassistant/zigbee2mqtt.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: homeautomation
  labels:
    app: zigbee2mqtt
spec:
  replicas: 0
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      priorityClassName: homeautomation-priority
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: serial-by-id
          hostPath:
            path: /dev/serial/by-id
            type: Directory
        - name: z2m-config
          persistentVolumeClaim:
            claimName: z2m-config-claim # Ensure you create this PVC
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:latest
        securityContext:
          privileged: true
        volumeMounts:
          - name: serial-by-id
            mountPath: /dev/serial/by-id
          - name: z2m-config
            mountPath: /app/data
        ports:
          - name: ui
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: homeautomation
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
  - name: ui
    port: 8080
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee-https
  namespace: homeautomation
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: zigbee-bas-tls
  rules:
  - host: zigbee.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zigbee2mqtt
            port:
              number: 8080
